2007-02-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Relase 0.2.5 updated for Quantlib 0.4.0

	* configure.in: Require Quantlib 0.4.0

2007-02-24  Dominick Samperi  <djsamperi@DecisionSynergy.com>

	* src/bermudan.cpp: Several updates for Quantlib 0.4.0

2006-11-10  Dirk Eddelbuettel  <edd@debian.org>

	* man/*.Rd: Updates to default method docs suggested by Kurt Hornik
	
2006-11-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.5 updated for QuantLib 0.3.14 

	* src/*.cpp:  Several minor changes for class renaming and
	  interface changes on the QuantLib side of things

2006-08-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.4 updated for QuantLib 0.3.13; this
	  required some changes in the fixed-income functions

	* configure.in: Tests for QuantLib version 0.3.13

	* tests/RQuantLib.R: Added the beginnings of unit-tests
	* tests/RQuantLib.Rout.save: Control output for unit tests

2006-07-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.3 using the new RcppTemplate version 4.2
	 
	* src/*: RcppTemplate is now used for all R/C++ interfaces
	  features from the new RcppTemplate

2006-03-30  Dirk Eddelbuettel  <edd@debian.org>

	* Release 0.2.2 once more with thanks to Dominick

2006-03-23  Dominick Samperi  <djsamperi@DecisionSynergy.com>

	* configure.in, configure.win, 
	  inst/lib/Makefile, inst/lib/Makefile.win,
	  src/Makefile, src/Makefile.win,
	  cleanup: modified to support use of RcppTemplate V2.2.
          RQuantLib shared library (or DLL) is created by linking
          against RcppSrc/libRcpp.a.
	  Tested against QuantLib 0.3.12.

	* Rcpp.{cpp,hpp}: added latest versions from RcppTemplate package.

2006-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* Release 0.2.1 with thanks to Dominick

2006-01-10  Dominick Samperi <dsamperi@DecisionSynergy.com>

	* man/DiscountCurve.Rd: Fixed typo and commented out rates
	  needing to be fractions in fixed formating in DiscountCurve example
