@@ -2,13 +2,13 @@
 # Makefile created by Dev-C++ 4.9.9.2
 # modified by UL in order to fit mingw and R requirements, 16.09.2005
 #
-# $Id: Makefile.win,v 1.8 2007/02/24 23:07:38 dsamperi Exp $
+# $Id: Makefile.win,v 1.9 2007/06/30 18:46:00 dsamperi Exp $
 
 #include $(RHOME)/src/gnuwin32/MkRules
 
 OBJ = barrier_binary.o bermudan.o curves.o vanilla.o implieds.o utils.o discount.o
 LINKOBJ  = barrier_binary.o bermudan.o curves.o vanilla.o implieds.o utils.o discount.o $(RES)
-DLLLIBS = -s -L../RcppSrc -lRcpp -L"$(RHOME)/bin" -lR -L "$(QUANTLIB_ROOT)/lib" -lQuantLib-mgw-0_4_0 --no-export-all-symbols --add-stdcall-alias
+DLLLIBS = -s -L../RcppSrc -lRcpp -L"$(RHOME)/bin" -lR -L "$(QUANTLIB_ROOT)/lib" -lQuantLib-mgw-0_8_1 --no-export-all-symbols --add-stdcall-alias
 BIN  = RQuantLib.dll
 CXXFLAGS = -I../RcppSrc -I"$(RHOME)/include" -I"$(RHOME)/src/include" -I"$(QUANTLIB_ROOT)" -Wall -O2 -DBUILDING_DLL=1 -DUSING_QUANTLIB
 RM = rm -f
