@@ -1,6 +1,16 @@
+2007-07-01  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION: Release 0.2.7, updated for QL 0.8.1
+	
+	* configure.in: Require QuantLib 0.8.1, and Boost 1.34.0
+
+2007-06-30  Dominick Samperi  <djsamperi@DecisionSynergy.com>
+
+	* src/bermudan.cpp, src/curves.cpp: Updated for QL 0.8.1
+
 2007-02-25  Dirk Eddelbuettel  <edd@debian.org>
 
-	* DESCRIPTION: Relase 0.2.5 updated for Quantlib 0.4.0
+	* DESCRIPTION: Relase 0.2.6 updated for Quantlib 0.4.0
 
 	* configure.in: Require Quantlib 0.4.0
 
